--- a/resources/scss/component/_button.scss
+++ b/resources/scss/component/_button.scss
@@ -3,7 +3,7 @@
 .btn {
     margin-top: 15px;
     width: 100%;
-    color: #fff;
+    color: $white;
     border: none;
     padding: 10px 0;
     text-transform: uppercase;
@@ -11,21 +11,24 @@
   }
   
   .default {
-    background-color: #51ddfc;
+    background-color: $color-primary;
+    &:hover {
+      background-color: green;
+    }
   }
   
   .error {
-    background-color: #e4757a;
+    background-color: $error;
   }
   
   .info {
-    background-color: #927bc1;
+    background-color: $info;
   }
   
   .success {
-    background-color: #63cc82;
+    background-color: $success;
   }
   
   .warning {
-    background-color: #fd7856;
+    background-color: $warning;
   }
