--- a/resources/scss/base/_typography.scss
+++ b/resources/scss/base/_typography.scss
@@ -1,7 +1,7 @@
 // Typography //
 
 .headline-primary {
-    color: #58e1c1;
+    color: $color-secondary;
     margin-left: 10px;
   }
   
@@ -11,7 +11,7 @@
   }
   
   .link {
-    color: #51ddfc;
+    color: $color-primary;
     font-weight: 700;
   }
   
@@ -21,6 +21,6 @@
     font-style: italic;
     margin-left: 20px;
     padding-left: 20px;
-    border-left: 8px solid #58e1c1;
+    border-left: 8px solid $color-secondary;
     border-radius: 5px;
   }
