--- a/resources/scss/component/_nav.scss
+++ b/resources/scss/component/_nav.scss
@@ -5,9 +5,7 @@
     flex-basis: 100%;
     display: flex;
     flex-direction: column;
-  }
-  
-  .nav-link {
+  &-link {
     text-align: center;
     border-radius: 5px;
     padding: 10px 0;
@@ -16,9 +14,9 @@
     transition: 
       background-color .2s ease-in-out, 
       color .2s ease-in-out;
+    &:hover {
+    color: $white;
+    background-color: $color-secondary;
+    }
   }
-  
-  .nav-link:hover {
-    color: #fff;
-    background-color: #58e1c1;
-  }
+}
