--- a/resources/scss/component/_nav.scss
+++ b/resources/scss/component/_nav.scss
@@ -19,4 +19,12 @@
     background-color: $color-secondary;
     }
   }
+  @include mq {
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    .nav-link {
+      flex-basis: 100px;
+      }
+  }
 }
