--- a/resources/scss/component/_grid.scss
+++ b/resources/scss/component/_grid.scss
@@ -41,85 +41,109 @@
       }
     }
   
-  .theme.col-1 {
+  .col-1 {
+    &.theme {
     background-color: #927bc1;
+    }
     @include mq {
       flex-basis: 8.33%;
     }
   }
   
-  .theme.col-2 {
+  .col-2 {
+    &.theme {
     background-color: #fd7856;
+    }
     @include mq {
       flex-basis: 16.67%;
     }
   }
   
-  .theme.col-3 {
+  .col-3 {
+    &.theme {
     background-color: #deb2ee;
+  }
     @include mq {
         flex-basis: 25.00%;
     }
   }
   
-  .theme.col-4 {
+  .col-4 {
+    &.theme {
     background-color: #7ee6fd;
+    }
     @include mq {
       flex-basis: 33.33%;
     }
   }
   
-  .theme.col-5 {
+  .col-5 {
+    &.theme {
     background-color: #88d9a0;
+    }
     @include mq {
       flex-basis: 41.67%;
     }
   }
   
-  .theme.col-6 {
+  .col-6 {
+    &.theme {
     background-color: #4da2bb;
+    }
     @include mq {
       flex-basis: 50.00%;
     }
   }
   
-  .theme.col-7 {
+  .col-7 {
+    &.theme {
     background-color: #ec9fa3;
+    }
     @include mq {
       flex-basis: 58.33%;
     }
   }
   
-  .theme.col-8 {
+  .col-8 {
+    &.theme {
     background-color: #fd9f85;
+    }
     @include mq {
       flex-basis: 66.67%;
     }
   }
   
-  .theme.col-9 {
+  .col-9 {
+    &.theme {
     background-color: #e4757a;
+    }
     @include mq {
       flex-basis: 75.00%
     }
   }
   
-  .theme.col-10 {
+  .col-10 {
+    &.theme {
     background-color: #63cc82;
+    }
     @include mq {
       flex-basis: 83.33%;
     }
   }
   
-  .theme.col-11 {
+  .col-11 {
+    &.theme {
     background-color: $color-primary;
+    }
     @include mq {
       flex-basis: 91.67%;
     }
   }
   
-  .theme.col-12 {
+  .col-12 {
+    &.theme {
     background-color: #80e8d1;
+    }
     @include mq {
       flex-basis: 100%;
     }
@@ -128,5 +152,17 @@
   .card {
     flex-basis: 100%;
   }
-  
-  
+
+  .media-text {
+    display: none;
+    @include mq {
+      display: initial;
+    }
+  }
+
+  .media-row {
+    display: none;
+    @include mq {
+      display: initial;
+  }
+}
